# ChangeLog for net-misc/ps3mediaserver
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/ps3mediaserver/ChangeLog,v 1.1 2011/01/06 04:46:23 vapier Exp $

*ps3mediaserver-1.20.412 (06 Jan 2011)

  06 Jan 2011; Mike Frysinger <vapier@gentoo.org>
  +ps3mediaserver-1.20.412.ebuild, +metadata.xml:
  Initial ebuild #264561 by Michael Mathurin.
