@@ -2,13 +2,13 @@
 Hash: SHA256
 
 DIST pms-generic-linux-unix-1.20.412.tgz 7900523 RMD160 abd47aad0365da3467d767b7fc0d6afaf9d38462 SHA1 c7b609a27aeab358e870b5c490425206e067bd01 SHA256 079005710f738782194740cbb79e5968e2cad44cd33872a2e2eccba08b504eaf
-EBUILD ps3mediaserver-1.20.412.ebuild 1435 RMD160 1ccdba5a5aa231dca5b92e2de2161e3ca886943b SHA1 3ad12726902ee90e7f3868ed189b531e03f37515 SHA256 3349e208f22e422cf9e8f0755ac1f1107efe82845667dfbe9e946bd3fe8e2252
-MISC ChangeLog 406 RMD160 c841c5f5f1c9508b12c9449bb796628eadbcaa61 SHA1 7b7ee9b11ead96e419fdd4b46a5e50d6a84de519 SHA256 7b688c7eb034cfb2fc7ec20a4f9bdd2ac7583a69c0e85b1a03c9c79501e0717c
+EBUILD ps3mediaserver-1.20.412-r1.ebuild 1407 RMD160 1163b63dca9218c811296d9c61b21e2d71f71606 SHA1 4eab383ddd250c8bf015ca388b07a774b721b1b3 SHA256 ce168534764353897f1fc1ba84f533d5b44cc16edb93f39a52b61ff23baaacb2
+MISC ChangeLog 620 RMD160 01675ad5b0d278cce736c32226835dd5f7312181 SHA1 45033db2fbfe64c344a853e7fa651f6ef6b72188 SHA256 566fd3c52bf96c9a14e464b13b3a1df2d0cb6fb1319d3988ed13ee7c98e9dc58
 MISC metadata.xml 450 RMD160 d97d850ef13df2921db3d580a8a2f5b429865677 SHA1 6ed55e13425e944dd8fe1de9538dd066c2dc9a7b SHA256 f3d3f558a859b34b2c4e629a03fafef4d7282ba12b97f366715e1f5481e6e46e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.16 (GNU/Linux)
 
-iF4EAREIAAYFAk0lVyEACgkQaC/OocHi7JbsvAD7B72htd6eNBREnF7clhXhJmnq
-SplWaGHsrFQ5F3s3KJUA/iePYPvwNqNQ0akV6ZMHp/hIZYGAjN8dO5NFxZx915E0
-=X3L5
+iF4EAREIAAYFAk0nVWAACgkQaC/OocHi7JbqrwD/SLWkgY582Jr99TajKyvdZ9MS
+5qxgyPL3cn1h3CSNpOUA+QEhCwCfBFExPyK/UA6HuXI6FsDLKAZF71UINdhJNyvy
+=OY68
 -----END PGP SIGNATURE-----
